--- a/render.yaml
+++ b/render.yaml
@@ -14,5 +14,5 @@ services:
       sync: false
     - key: ChannelSecret
       sync: false
-    - key: OPENAI_API_KEY
+    - key: GOOGLE_API_KEY
       sync: false
